--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -14,3 +14,4 @@ include parallel_esn/_version.py
 
 # If including data files in the package, add them like:
 # include path/to/data_file
+include data/*.csv
